implements api property
